[package]
name = "core"
version = "0.1.0"
authors = ["Alexandre Frigon <alexandre.frigon.1@gmail.com>"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
#math = { git = "https://github.com/roadrunner-craft/math" }
math = { path = "../../math" }
log = { version = "0.4.8", features = ["std"] }
termcolor = "1.1.0"
lazy_static = "1.4.0"


[lib]
name = "core"

[features]
nightly = []
